# chess-stats

./: README.md  TODO.md  analysis.ipynb  chess-com-openings.tsv  collect-chess-games.py  game_explorer.py  kaggle-openings.csv  pyproject.toml  scrape-chess-com-openings.js
